# SerialCommunication

./: CMakeLists.txt
Source/: Main.cpp  dir.cmake
Source/SerialCom/: Host.h  Linux.cpp  Serial.cpp  Serial.h  Windows.cpp  dir.cmake
